--- a/wrepair/index.html
+++ b/wrepair/index.html
@@ -39,7 +39,7 @@
 			<header class="site-header" style="background-image: url(img/top-bg.jpg);">
 				<div class="top-line">
 					<a href="#" class="logo"><img src="img/logo.png" alt="Ремонт окон"></a>
-					<div class="phone hidden-xs"><i class="fa fa-mobile"></i> <a href="tel:8 (905) 105-22-26"> <span>8 (905) 105-22-26</span> </a></div>
+					<div class="phone hidden-xs"><i class="fa fa-mobile"></i> <a href="tel:8 (962) 156-97-32"> <span>8 (962) 156-97-32</span> </a></div>
 					<a href="#my-menu" class="hamburger hamburger--emphatic">
 						<span class="hamburger-box">
 							<span class="hamburger-inner">
@@ -93,7 +93,7 @@
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-							<li><a href="https://vk.com/remont_okon37"><i class="fa fa-vk"></i></a></li>
+							<li><a href="#"><i class="fa fa-vk"></i></a></li>
 						</ul>
 					</nav>
 				</div>
@@ -105,7 +105,7 @@
 								<i class="fa fa-location-arrow"></i> г. Иваново, ул. Лежневская, 55
 							</div>
 							<div class="col-md-4 col-sm-6">
-								<div class="phone-h"><i class="fa fa-mobile"></i> 8 (905) 105-22-26</div>
+								<div class="phone-h"><i class="fa fa-mobile"></i> 8 (962) 156-97-32</div>
 							</div>
 							<div class="col-md-4 hidden-sm hidden-xs">
 								<i class="fa fa-clock-o"></i> Время работы: ежедневно: 10:00 - 22:00
@@ -470,7 +470,7 @@
 										<ul>
 											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 											<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-											<li><a href="https://vk.com/remont_okon37"><i class="fa fa-vk"></i></a></li>
+											<li><a href="#"><i class="fa fa-vk"></i></a></li>
 										</ul>
 									</nav>
 								</div>
@@ -494,7 +494,7 @@
 							
 							<p class="footer-addr"><i class="fa fa-location-arrow"></i> г. Иваново, ул. Лежневская, 55<br>4 уровень, напротив МФЦ</p>
 							<p class="footer-addr"><i class="fa fa-clock-o"></i> Время работы: Ежедневно, <br> 10:00 - 22:00</p>
-							<p class="footer-addr"><span class="footer-phone"><i class="fa fa-mobile"></i>8 (905) 105-22-26</span></p>
+							<p class="footer-addr"><span class="footer-phone"><i class="fa fa-mobile"></i>8 (962) 156-97-32</span></p>
 
 						</div></div>
 						<div class="col-lg-4 col-sm-12 col-xs-12"><div class="footer-column">
